Fixed shadow on small screens

--- a/src/sass/header-system/_header-menu.scss
+++ b/src/sass/header-system/_header-menu.scss
@@ -109,6 +109,7 @@
     margin-top: 0;
     right: unset;
     position: relative;
+    box-shadow: none;
   }
 
   &__submenu-list {
